--- a/electron/package.json
+++ b/electron/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "@nextelectron/electron",
+  "name": "electron",
   "version": "0.0.1",
-  "main": "main/src/main.js",
   "author": {
-    "name": "saybackend.com"
+    "name": "spa5k",
+    "email": "admin@saybackend.com",
+    "url": "https://saybackend.com"
   },
+  "main": "./build/main.js",
   "scripts": {
     "dist": "electron-builder --dir",
     "postinstall": "electron-builder install-app-deps",
     "start": "NODE_ENV=development electron .",
-    "build": "swc ./src -d main",
-    "build:dev": "swc ./src -d main --watch",
+    "build": "tsup",
+    "build:dev": "tsup --watch",
     "dev": "npm-run-all --parallel build:dev electron:dev",
-    "electron:dev": "cross-env NODE_ENV='development' nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "electron:dev": "cross-env NODE_ENV='development' nodemon"
   },
   "dependencies": {
+    "@electron-toolkit/utils": "^3.0.0",
     "cross-env": "^7.0.3",
     "get-port-please": "^3.1.2",
-    "next": "^14.2.3"
+    "next": "^14.2.4"
   },
   "devDependencies": {
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.5.5",
-    "electron": "^30.0.2",
+    "@types/node": "^20.14.10",
+    "electron": "^31.1.0",
     "electron-builder": "^24.13.3",
-    "nodemon": "^3.1.0",
-    "npm-run-all": "^4.1.5"
+    "nodemon": "^3.1.4",
+    "npm-run-all": "^4.1.5",
+    "tsup": "^8.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -35,7 +37,7 @@
     "asar": true,
     "executableName": "NextJSElectron",
     "files": [
-      "main"
+      "build"
     ],
     "extraFiles": [
       {
