--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,7 @@
 {
   "name": "electron",
   "version": "0.0.1",
+  "homepage": "https://saybackend.com",
   "author": {
     "name": "spa5k",
     "email": "admin@saybackend.com",
@@ -8,7 +9,13 @@
   },
   "main": "./build/main.js",
   "scripts": {
-    "dist": "electron-builder --dir",
+    "clean": "rm -rf web",
+    "copy": "cp ../web/.next/standalone/web web -r && cp ../web/.next/static web/.next/static -r && cp ../web/public web/public -r",
+    "prepare": "npm run clean && npm run copy",
+    "dist": "npm run prepare && electron-builder --dir",
+    "linux": "npm run prepare && electron-builder --linux deb",
+    "win": "npm run prepare && electron-builder --win",
+    "mac": "npm run prepare && electron-builder --mac",
     "postinstall": "electron-builder install-app-deps",
     "start": "NODE_ENV=development electron .",
     "build": "tsup",
@@ -21,11 +28,12 @@
     "@next/env": "^14.2.5",
     "cross-env": "^7.0.3",
     "get-port-please": "^3.1.2",
-    "next": "^14.2.4"
+    "next": "^14.2.5",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "electron": "^31.1.0",
+    "electron": "^31.2.0",
     "electron-builder": "^24.13.3",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
@@ -37,22 +45,33 @@
   "build": {
     "asar": true,
     "executableName": "NextJSElectron",
-    "files": [
-      "build"
+    "appId": "com.saybackend.nextjs-electron",
+    "asarUnpack": [
+      "node_modules/next",
+      "node_modules/@img",
+      "node_modules/sharp"
     ],
-    "extraFiles": [
+    "files": [
+      "build",
       {
-        "from": "../web/.next/standalone/web",
-        "to": "web"
-      },
-      {
-        "from": "../web/.next/static",
-        "to": "web/.next/static"
-      },
-      {
-        "from": "../web/public",
-        "to": "web/public"
+        "from": "web",
+        "to": "app",
+        "filter": [
+          "!**/.env",
+          "!**/package.json"
+        ]
       }
-    ]
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "linux": {
+      "target": [
+        "deb"
+      ],
+      "category": "Development"
+    }
   }
 }
