Upgrade all stuff to the latest version

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "main": "build/main.js",
   "description": "NextJS App with Electron",
   "scripts": {
-    "next:dev": "next dev",
-    "next:build": "next build",
+    "next:dev": "next dev --turbopack",
+    "next:build": "next build --turbopack",
     "next:start": "next start",
-    "next:lint": "next lint",
+    "next:lint": "eslint",
     "format": "dprint fmt",
     "postinstall": "electron-builder install-app-deps",
     "electron:dist": "electron-builder --dir",
@@ -28,29 +28,31 @@
     "electron:watch": "cross-env NODE_ENV='development' nodemon"
   },
   "dependencies": {
-    "@electron-toolkit/utils": "^3.0.0",
-    "@next/env": "^14.2.5",
-    "cross-env": "^7.0.3",
-    "get-port-please": "^3.1.2",
-    "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sharp": "^0.33.4"
+    "@electron-toolkit/utils": "^4.0.0",
+    "@next/env": "^15.5.4",
+    "get-port-please": "^3.2.0",
+    "next": "^15.5.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "electron": "^31.3.1",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.5.7",
-    "eslint-config-next": "14.2.5",
-    "nodemon": "^3.1.4",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^22.18.7",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "cross-env": "^10.1.0",
+    "dprint": "^0.50.2",
+    "electron": "^38.2.0",
+    "electron-builder": "^26.0.12",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
+    "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.7",
-    "tsup": "^8.2.4",
-    "typescript": "^5.5.4"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "tsup": "^8.5.0",
+    "typescript": "^5.9.2"
   },
   "build": {
     "asar": true,
