Upgrade dependencies and update README with maintenance notice
- Updated `dprint.json` to use biome version 0.10.4.
- Bumped version in `package.json` to 2.0.0 and updated various dependencies including React, Electron, ESLint, and TypeScript to their latest versions.
- Added a maintenance notice in `README.md` indicating that the repository is no longer maintained and suggesting migration to TanStack Start.
- Refactored `ServerComponent.tsx` to use width and height attributes for the Image component for better performance.

This commit ensures the project is up-to-date with the latest dependencies while informing users of the project's current status.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs_approuter_electron",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "private": true,
   "homepage": "https://saybackend.com",
   "author": {
@@ -11,48 +11,49 @@
   "main": "build/main.js",
   "description": "NextJS App with Electron",
   "scripts": {
-    "next:dev": "next dev --turbopack",
-    "next:build": "next build --turbopack",
-    "next:start": "next start",
-    "next:lint": "eslint",
-    "format": "dprint fmt",
-    "postinstall": "electron-builder install-app-deps",
-    "electron:dist": "electron-builder --dir",
-    "electron:dist:deb": "electron-builder --linux deb",
-    "electron:build": "tsup",
     "build": "run-s next:build electron:build",
-    "dist": "run-s build electron:dist",
     "dev": "npm-run-all --parallel electron:dev next:dev",
+    "dist": "run-s build electron:dist",
     "electron:build_watch": "tsup --watch",
+    "electron:build": "tsup",
     "electron:dev": "npm-run-all --parallel electron:build_watch electron:watch",
-    "electron:watch": "cross-env NODE_ENV='development' nodemon"
+    "electron:dist:deb": "electron-builder --linux deb",
+    "electron:dist": "electron-builder --dir",
+    "electron:watch": "cross-env NODE_ENV='development' nodemon",
+    "format": "dprint fmt",
+    "next:build": "next build --turbopack",
+    "next:dev": "next dev --turbopack",
+    "next:lint": "eslint",
+    "next:start": "next start",
+    "postinstall": "electron-builder install-app-deps",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@electron-toolkit/utils": "^4.0.0",
     "@next/env": "^15.5.4",
     "get-port-please": "^3.2.0",
     "next": "^15.5.4",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^22.18.7",
-    "@types/react": "^19.1.15",
-    "@types/react-dom": "^19.1.9",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^24.6.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "cross-env": "^10.1.0",
     "dprint": "^0.50.2",
-    "electron": "^38.2.0",
+    "electron": "^38.2.1",
     "electron-builder": "^26.0.12",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^4.1.14",
     "tsup": "^8.5.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   },
   "build": {
     "asar": true,
